# LANShield

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
access-protocol/: mermaid_graph_poc.txt  server_pna_poc.py
app/: build.gradle.kts  firebase.gradle.kts.definitelynotagradlefile  proguard-rules.pro
app/schemas/org.distrinet.lanshield.database.AppDatabase/: 3.json
app/src/androidTest/java/org/distrinet/lanshield/: ExampleInstrumentedTest.kt  NotificationPermissionGateTest.kt
app/src/androidTest/java/org/distrinet/lanshield/vpnservice/: ConnectionOwnerUidUnconnectedUdpTest.kt  VpnForwardingInstrumentedTest.kt  VpnServiceObserverLeakTest.kt  VpnServiceStartCommandTest.kt
app/src/androidTest/java/tech/httptoolkit/android/vpn/: ConcurrentDownloadInstrumentedTest.kt  SlowClientDownloadInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/distrinet/lanshield/: LANShieldApplication.kt  LANShieldBroadcastReceiver.kt  MainActivity.kt
app/src/main/java/org/distrinet/lanshield/backendsync/: AppUsageStats.kt  BackendApi.kt  CrashReporter.kt  FirebaseCrashReporter.kt  OpenPortsFinder.kt  OpenPortsWorker.kt  SendToServerWorker.kt
app/src/main/java/org/distrinet/lanshield/database/: AppDatabase.kt
app/src/main/java/org/distrinet/lanshield/navigation/: LANShieldNavHost.kt  TopLevelDestination.kt
app/src/main/java/org/distrinet/lanshield/pna/: PnaCacheManager.kt  PnaManager.kt
app/src/main/java/org/distrinet/lanshield/ui/: LANShieldApp.kt  LANShieldAppState.kt  LANShieldIcons.kt
app/src/main/java/org/distrinet/lanshield/vpnservice/: DpiResult.kt  IPHeader.kt  LANShieldNotificationManager.kt  PolicyEngine.kt  VPNRunnable.kt  VPNService.kt  VPNServiceWorker.kt  dpi.kt
app/src/main/java/tech/httptoolkit/android/vpn/: ClientPacketWriter.java  Packet.java  Session.java  SessionHandler.java  SessionManager.java
app/src/main/jni/: CMakeLists.txt  lanshield-dpi.c  test-native.c
app/src/main/jni/ndpi-generated/: ndpi_config.h
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/org/distrinet/lanshield/: PackageResolutionTest.kt
app/src/test/java/org/distrinet/lanshield/testutil/: LiveDataTestUtil.kt
docs/: android-permission.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: full_description.txt  short_description.txt  title.txt
(+82 files in other folders)
